--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
 	<div class="g1of3 bgclr-f0fff0">
 		<article class="content">
 			<h3>What is this Grid?</h3>
-			<p>A simple, small (less than 500 bytes uncompressed), percentage based grid system that can flow inside any fluid or fixed container.</p>
+			<p>A simple, small (less than 500 bytes), percentage based grid system that can flow inside any fluid or fixed container.</p>
 		</article>
 	</div>
 	<div class="g1of3 bgclr-e0eee0">
 		<article class="content">
 			<h3>Download (Source)</h3>
 			<p>
-				Download as a <a href="">zip</a> or <a href="">tar</a> package.
-				or clone the source from Github - <a href="">github.com/Brajeshwar/grid/</a>.
+				Download as a <a href="https://github.com/Brajeshwar/grid/zipball/master">zip</a>
+				or <a href="https://github.com/Brajeshwar/grid/tarball/master">tar</a> package.
+				or clone the source from Github - <a href="https://github.com/Brajeshwar/grid">github.com/Brajeshwar/grid</a>.
 			</p>
 		</article>
 	</div>
 	<div class="g1of3 bgclr-e0eeee">
 		<article class="content">
 			<h3>Contribute</h3>
-			<p>You can contribute by sending a pull request or an issue. You can also fork the project or clone it.</p>
+			<p>You can contribute by sending a <a href="https://github.com/Brajeshwar/grid/pulls">pull request</a> or <a href="https://github.com/Brajeshwar/grid/issues">an issue</a>. You can also fork the project or clone it.</p>
 		</article>
 	</div>
 </div>
