Ready to tell friends to test it.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<h1><a href="">Grid</a></h1>
 	</div>
 	<div id="meta" class="g1of2">
-		Related Article &rsaquo; <a href="">The Title of the Article</a>
+		Related Article &rsaquo; TBD
 		&bull;
 		Tweet @<a href="http://twitter.com/Brajeshwar">Brajeshwar</a>
 	</div>
