Description updated. Readme updated.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="description" content="A simple, barebone percentage grid system that can flow inside any fluid or fixed container.">
+<meta name="description" content="A simple, bare-bone fluid grid system that can flow inside any fluid or fixed container.">
 <meta name="keywords" value="CSS, grid, percentage, fluid, fixed">
 
 <link rel="stylesheet" href="grid.css">
@@ -39,7 +39,7 @@
 	<div class="g1of3 bgclr-f0fff0">
 		<article class="content">
 			<h3>What is this Grid?</h3>
-			<p>A simple, small (less than 500 bytes), percentage based grid system that can flow inside any fluid or fixed container.</p>
+			<p>A simple, small (less than 500 bytes), fluid grid system that can flow inside any fluid or fixed container.</p>
 		</article>
 	</div>
 	<div class="g1of3 bgclr-e0eee0">
