Shortening and fixing article link length.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<h1><a href="">Grid</a></h1>
 	</div>
 	<div id="meta" class="g1of2">
-		Related Article &rsaquo; <a href="http://brajeshwar.com/2011/grid-a-minimal-css-grid-utility/">Grid - a minimal CSS Grid utility</a>
+		&rsaquo; <a href="http://brajeshwar.com/2011/grid-a-minimal-css-grid-utility/">Read the related article</a>
 		&bull;
 		Tweet @<a href="http://twitter.com/Brajeshwar">Brajeshwar</a>
 	</div>
