--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<title>Grid</title>
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+<title>Grid</title>
+
 <meta name="description" content="A simple and minimal fluid grid system that can flow inside any fluid or fixed container.">
 <meta name="keywords" value="CSS, grid, percentage, fluid, fixed">
 
